--- a/team-syntax/hello.html
+++ b/team-syntax/hello.html
@@ -1,1 +1,10 @@
-hello world.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+  </head>
+  <body>
+    <h1>Testo</h1>
+  </body>
+</html>
