--- a/team-Codewars/hello.html
+++ b/team-Codewars/hello.html
@@ -1,1 +1,10 @@
-Hello World.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>codewars</title>
+  </head>
+  <body>
+    <h1>Hello world</h1>
+  </body>
+</html>
