--- a/team-Dreamteam/Hello.html
+++ b/team-Dreamteam/Hello.html
@@ -1,1 +1,12 @@
-Hello World.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Dreamteam</title>
+  </head>
+  <body>
+
+    <h1>Hello World.</h1>
+    <img src="1.jpg" alt="">
+  </body>
+</html>
