--- a/team-Dreamteam/Hello.html
+++ b/team-Dreamteam/Hello.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Dreamteam</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
 
-    <h1>Hello World.</h1>
+    <h1 class ="kitten">Hello World.</h1>
+    <h1>Test</h1>
+    <h1 id="cat">Test 2</h1>
     <img src="1.jpg" alt="">
+
+    <script type="text/javascript">
+      alert("Meow");
+    </script>
+
   </body>
 </html>
