--- a/team-syntax/hello.html
+++ b/team-syntax/hello.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Hello</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <h1>Testo</h1>
+    <h1>testo</h1>
   </body>
 </html>
