Hackers about in  hackertown

--- a/team- to l4zy f0r 4 nam3/hello.html
+++ b/team- to l4zy f0r 4 nam3/hello.html
@@ -14,7 +14,7 @@
 
 
   <script type="text/javascript">
-  alert("miauw")
+  alert("Warning: This site has been known to harbour viruses!!!")
   </script>
 </body>
 </html>
