--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-  ><head>
+<html lang="en" class="js csstransforms csstransforms3d csstransitions"> == $0
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>proximus digitalent/title>
+    <title>proximus digitalent</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
