--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -68,24 +68,21 @@
 	<div id="flex-head" class="flexslider">
 
 	<div class="flex-viewport" style="overflow: hidden; position: relative;"><ul class="slides" style="width: 1000%; transition-duration: 0s; transform: translate3d(-966px, 0px, 0px);"><li class="clone" aria-hidden="true" style="width: 966px; float: left; display: block;">
-				<h1>And I'm a Web Designer</h1>
-				<h2>Design &amp; Build Beautiful Crafted Web Experiences</h2>
+
 			</li>
 			<li style="width: 966px; float: left; display: block;" class="flex-active-slide">
-				<h1>Hi,I'm Joker</h1>
-				<h2>Welcome to My Studio</h2>
+				<h1>Hi,i am truej</h1>
+				<h2>Welcome to My student homebase</h2>
 			</li>
 			<li class="" style="width: 966px; float: left; display: block;">
-				<h1>I'm a Freelancer</h1>
-				<h2>Passionate about solving problems with clarity, simplicity &amp; honestly</h2>
+				<h1>I'm jonathan</h1>
+				<h2>i also am a student and is also my homebase </h2>
 			</li>
 			<li class="" style="width: 966px; float: left; display: block;">
-				<h1>And I'm a Web Designer</h1>
-				<h2>Design &amp; Build Beautiful Crafted Web Experiences</h2>
+
 			</li>
 		<li style="width: 966px; float: left; display: block;" class="clone" aria-hidden="true">
-				<h1>Hi,I'm Joker</h1>
-				<h2>Welcome to My Studio</h2>
+				
 			</li></ul></div><ol class="flex-control-nav flex-control-paging"><li><a class="flex-active">1</a></li><li><a class="">2</a></li><li><a class="">3</a></li></ol><ul class="flex-direction-nav"><li><a class="flex-prev" href="#">Previous</a></li><li><a class="flex-next" href="#">Next</a></li></ul></div>
     <!-- end slider -->
 		<a href="#aboutMore" class="btn btnAbout btn-clear border-color color-primary btn-lg linear">READ MORE</a>
