--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -1,6 +1,28 @@
-<!DOCTYPE html>
-<html lang="en" class="js csstransforms csstransforms3d csstransitions"> == $0
-<body style="">
+<html lang="en" class=" js csstransforms csstransforms3d csstransitions"><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Joker - Creative One Page Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Add custom CSS here -->
+
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/ekko-lightbox.css" rel="stylesheet">
+    <link href="css/flexslider.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+		<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+  </head>
+
+  <body style="">
   <div id="boxWrapp">
     <div class="main-nav clearfix" style="">
 	  <!-- navbar -->
@@ -44,28 +66,28 @@
 			<!-- slider -->
 	<div id="flex-head" class="flexslider">
 
-	<div class="flex-viewport" style="overflow: hidden; position: relative;"><ul class="slides" style="width: 1000%; transition-duration: 0.6s; transform: translate3d(-2898px, 0px, 0px);"><li class="clone" aria-hidden="true" style="width: 966px; float: left; display: block;">
-				<h1>And I'm a Web Designer</h1>
-				<h2>Design &amp; Build Beautiful Crafted Web Experiences</h2>
+	<div class="flex-viewport" style="overflow: hidden; position: relative;"><ul class="slides" style="width: 1000%; transition-duration: 0.6s; transform: translate3d(-2895px, 0px, 0px);"><li class="clone" aria-hidden="true" style="width: 965px; float: left; display: block;">
+				<h1>And I don't have a clue what I'm doing right now</h1>
+				<h2>Seriously, what is this?</h2>
 			</li>
-			<li style="width: 966px; float: left; display: block;" class="">
-				<h1>Hi,I'm Joker</h1>
-				<h2>Welcome to My Studio</h2>
+			<li style="width: 965px; float: left; display: block;" class="">
+				<h1>Hello, I'm nine</h1>
+				<h2>Welcome to my attempts to work at this</h2>
 			</li>
-			<li class="" style="width: 966px; float: left; display: block;">
-				<h1>I'm a Freelancer</h1>
-				<h2>Passionate about solving problems with clarity, simplicity &amp; honestly</h2>
+			<li class="" style="width: 965px; float: left; display: block;">
+				<h1>I'm a student</h1>
+				<h2>Just fuckin about on this website</h2>
 			</li>
-			<li class="flex-active-slide" style="width: 966px; float: left; display: block;">
-				<h1>And I'm a Web Designer</h1>
-				<h2>Design &amp; Build Beautiful Crafted Web Experiences</h2>
+			<li style="width: 965px; float: left; display: block;" class="flex-active-slide">
+				<h1>And I don't have a clue what I'm doing right now</h1>
+				<h2>Seriously, what is this?</h2>
 			</li>
-		<li style="width: 966px; float: left; display: block;" class="clone" aria-hidden="true">
+		<li style="width: 965px; float: left; display: block;" class="clone" aria-hidden="true">
 				<h1>Hi,I'm Joker</h1>
 				<h2>Welcome to My Studio</h2>
 			</li></ul></div><ol class="flex-control-nav flex-control-paging"><li><a class="">1</a></li><li><a class="">2</a></li><li><a class="flex-active">3</a></li></ol><ul class="flex-direction-nav"><li><a class="flex-prev" href="#">Previous</a></li><li><a class="flex-next" href="#">Next</a></li></ul></div>
     <!-- end slider -->
-		<a href="#aboutMore" class="btn btnAbout btn-clear border-color color-primary btn-lg linear">READ MORE</a>
+		<a href="#aboutMore" class="btn btnAbout btn-clear border-color color-primary btn-lg linear">Bullshit here</a>
 	</div><!--  end main caption -->
 
     </div>
@@ -405,6 +427,4 @@
   </div>
 
 
-</body>
-
-</html>
+</body></html>
