--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -60,14 +60,14 @@
 
 	<div class="maskHeader"></div>
 	<div class="main-caption">
-		
 
-    <h1>Hello, I'm nine</h1>
-    <h2>Welcome to my attempts to work at this</h2>
-    <h1>I'm a student</h1>
+
+    <h1>Hello,we are truej and jonathan</h1>
+    <h2>Welcome to our attempts to work at this</h2>
+    <h1>we are students</h1>
     <h2>Just fuckin about on this website</h2>
-    <h1>And I don't have a clue what I'm doing right now</h1>
-    <h2>Seriously, what is this?</h2>
+    <h1>we don't have a clue what is going on  right now</h1>
+    <h2>Seriously, what the fuck is this?</h2>
 		<a href="#aboutMore" class="btn btnAbout btn-clear border-color color-primary btn-lg linear">Bullshit here</a>
 	</div><!--  end main caption -->
 
