--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -83,6 +83,7 @@
           <div class="col-md-10  col-md-offset-1">
 		    <div class="build title-page">
 				<h2 class="text-center">About Us</h2>
+        <h3 class="text-center">we are students that want to make a website, hope we do great work</h3>
 				<div class="line-title bg-primary"></div>
 			</div>
 		   </div><!-- end col -->
@@ -92,65 +93,19 @@
            <div class="col-md-6">
 			   <div class="build main-about">
 				   <div class="row">
-				       <div class="col-md-3">
-				            <div class="main-avatar text-center">
-				                <div class="avatar img-thumbnail img-circle">
-				                <img src="img/avatar.jpg" alt="avatar">
-				                </div>
-				            </div>
 
-				       </div>
 				       <div class="col-md-9">
 				            <div class="about-content">
-						<p>Hello, I'm Joker a freelance designer &amp; front end developer based in Yogyakarta. I Love designing and developing websites as much I  love to traveling. I have been working in the field for more than 5 year &amp; would Love to help you take your product to the next level.</p>
-						<a href="#contact" class="btn btn-clear btn-lg border-color linear hire">AVAILABLE TO HIRE</a>
+
 					</div>
 				       </div>
 				   </div>
-
+         </div>
 
 				</div>
             </div><!-- end col -->
 
-        <div class="col-md-6">
-                <div class="build progressbar-a">
-                    <div class="wrapp-progress">
-                        <p class="pull-left">PHOTOSHOP</p>
-                        <div class="progress">
 
-                          <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100" style="width: 89%;">
-                            <span class="precent-value">89%</span>
-							<i class="fa fa-caret-down"></i>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="wrapp-progress">
-                        <p class="pull-left">HTML &amp; CSS</p>
-                        <div class="progress">
-
-                          <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-                            <span class="precent-value">95%</span>
-							<i class="fa fa-caret-down"></i>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="wrapp-progress">
-                        <p class="pull-left">ILLUSTRATOR</p>
-                        <div class="progress">
-
-                          <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                           <span class="precent-value">60%</span>
-						   <i class="fa fa-caret-down"></i>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="wrapp-progress">
-                        <p class="pull-left">WORDPRESS</p>
-                        <div class="progress">
-
-                          <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                           <span class="precent-value">70%</span>
-						   <i class="fa fa-caret-down"></i>
                           </div>
                         </div>
                     </div>
