--- a/Codewars/index.html
+++ b/Codewars/index.html
@@ -51,10 +51,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">Twee kippen zitten naast elkaar. De ene kip zegt tok. Vraagt die andere kip: are you tokking to me?</h2>
             <hr class="light">
 
-            <p id='tekst'>Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p id='tekst'><iframe width="560" height="315" src="https://www.youtube.com/embed/TAryFIuRxmQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe></p>
 
 <a href="#" onclick="toggle();return false;" style="color:white;">toggle on/off</a>
 <script type="text/javascript">
