--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -57,7 +57,6 @@
 	</div>
     <!-- Full Page Image Header Area -->
     <div id="about" class="header" style="height: 759px;">
-
 	<div class="maskHeader"></div>
 	<div class="main-caption">
 
@@ -82,7 +81,7 @@
           <div class="col-md-10  col-md-offset-1">
 		    <div class="build title-page">
 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wuggc60TVzU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 
     <!-- /Intro -->
 
