--- a/team- to l4zy f0r 4 nam3/Site-Badmann.html
+++ b/team- to l4zy f0r 4 nam3/Site-Badmann.html
@@ -26,33 +26,7 @@
   <div id="boxWrapp">
     <div class="main-nav clearfix" style="">
 	  <!-- navbar -->
-	<div id="undefined-sticky-wrapper" class="sticky-wrapper" style="height: 0px;"><nav class="navbar navbar-inverse" role="navigation">
-        <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#NavCol">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand bg-primary" href="#about">JOKER</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="NavCol">
-         <ul class="nav navbar-nav navbar-right">
-
-            <li class="current"><a href="#about" class="linear">Home</a></li>
-            <li><a href="#aboutMore" class="linear">About</a></li>
-            <li><a href="#work" class="linear">Work</a></li>
-            <li><a href="#contact" class="linear">Contact</a></li>
-          </ul>
-
-
-        </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav></div>
+	<div id="undefined-sticky-wrapper" class="sticky-wrapper" style="height: 0px;"></div>
 
 	</div>
     <!-- Full Page Image Header Area -->
@@ -87,66 +61,6 @@
 
 
 
-    <!--contact-->
-    <div id="contact" class="page page-bgcolor">
-		<div class="container">
-		<div class="row">
-          <div class="col-md-10  col-md-offset-1">
-		    <div class="build title-page">
-				<h2 class="text-center">GET IN TOUCH</h2>
-				<div class="line-title bg-primary"></div>
-			</div>
-		   </div><!-- end col -->
-		</div><!-- end row -->
-	  	<div class="row">
-			<div class="col-md-4 ">
-				<div class="build contact clearfix text-center">
-					<span class="fa fa-map-marker"></span>
-						<p>Merapi Street no.43 <br>Yogyakarta. Indonesia</p><p>
-				</p></div>
-			</div><!-- end col -->
-			<div class="col-md-4 ">
-				<div class="build contact clearfix text-center">
-					<span class="fa fa-phone"></span>
-					<p>tel.<a href="tel:+824 2344 5602">+824 2344 5602</a></p>
-					<p>mob.<a href="tel:+824 256 9877">+824 256 9877</a></p>
-
-				</div>
-			</div>
-			<div class="col-md-4 ">
-				<div class="build contact clearfix text-center">
-					<span class="fa fa-envelope"></span>
-					<p>email.joker@youmail.co.id</p>
-				</div>
-			</div>
-		</div><!-- end row -->
-
-	  </div><!-- end container -->
-	</div>
-    <!--contact-->
-
-    <!-- Footer -->
-    <footer class="bg-black">
-      <div class="container">
-        <div class="row">
-			<div class="col-md-6 ">
-				<div class="cp-right">
-					<p>© 2014 <a href="http://omahpsd.com" class="color-primary linear">OmahPSD</a>. All Rights Reserved. </p>
-				</div><!-- end build -->
-			</div><!-- end col -->
-
-			<div class="col-md-6 text-right">
-
-			<ul class="list-inline">
-			<li><a href="#" class="socIcon color-primary linear"><i class="fa fa-facebook fa-2x"></i></a></li>
-			<li><a href="#" class="socIcon color-primary linear"><i class="fa fa-twitter fa-2x"></i></a></li>
-			<li><a href="#" class="socIcon color-primary linear"><i class="fa fa-dribbble fa-2x"></i></a></li>
-			</ul>
-
-			</div>
-        </div>
-      </div>
-    </footer>
     <!-- /Footer -->
 
     <!-- JavaScript -->
