--- a/team-tol4zyf0r4nam3/Site-Badmann.html
+++ b/team-tol4zyf0r4nam3/Site-Badmann.html
@@ -4,7 +4,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joker - Creative One Page Template</title>
+    <title>Badmann</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
